[package]
name = "CLAEMKS"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8"
rand_core = {version = "0.6", features = ["getrandom"]}
curve25519-dalek = { version = "4.0", features = ["serde", "rand_core", "digest"] }
sha2 = "0.10"

[dev-dependencies]
bincode = "1.2.1"
hex = "0.4"
hex-literal = "0.4.1"

# For benchmarking
criterion = "0.5"

[[bench]]
name = "bench"
harness = false